# docs-sdk-cxx

./: .gitignore  .gitmodules  README.adoc  README.md  antora.yml
modules/ROOT/: nav.adoc
modules/concept-docs/pages/: .#durability-replication-failure-considerations.adoc  best-practices.adoc  compression.adoc  data-durability-acid-transactions.adoc  data-model.adoc  documents.adoc  durability-replication-failure-considerations.adoc  health-check.adoc  management-api.adoc  n1ql-query.adoc  nonjson.adoc  querying-your-data.adoc  response-time-observability.adoc  sdk-user-management-overview.adoc  sqlpp-query.adoc  subdocument-operations.adoc  transactions-cleanup.adoc  transactions-error-handling.adoc  transactions.adoc  xattr.adoc
modules/devguide/examples/cxx/: .clang-format  CMakeLists.txt
modules/devguide/examples/cxx/src/: analytics.cxx  async_apis.cxx  cas.cxx  client_settings.cxx  connect.cxx  data_model.cxx  error_handling.cxx  health_check.cxx  kv_operations.cxx  logging.cxx  managing_connections.cxx  minimal.cxx  overview.cxx  queries.cxx  search.cxx  start_using.cxx  subdocument.cxx  transactions.cxx
modules/hello-world/pages/: overview.adoc  platform-help.adoc  sample-application.adoc  start-using-sdk.adoc  student-record-developer-tutorial.adoc
modules/howtos/pages/: .#encrypting-using-sdk.adoc  analytics-using-sdk.adoc  collecting-information-and-logging.adoc  concurrent-async-apis.adoc  concurrent-document-mutations.adoc  distributed-acid-transactions-from-the-sdk.adoc  encrypting-using-sdk.adoc  error-handling.adoc  health-check.adoc  (+18 more)
(+19 files in other folders)
